# go-expert/api/internal/dto/user.go
@@ -10,3 +10,7 @@ type LoginUserInput struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type LoginUserOutput struct {
+	AccessToken string `json:"access_token"`
+}
